--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
     "dotenv": "^16.0.1",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
+    "fs": "^0.0.1-security",
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^4.6.0",
     "mongoose": "^6.3.5",
+    "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.7.5",
     "pm2": "^5.2.0",
     "superagent": "^8.0.0",
